# GukoBot-Re

./: .env.dev  .gitignore  README.md  bot.py  config.py  pyproject.toml
guko_bot/plugins/: help.py
guko_bot/plugins/gu_pic/: __init__.py
