[tool.poetry]
name = "Guko_Bot"
version = "0.1.0"
description = "Guko_Bot"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
nonebot2 = {extras = ["test"], version = "^2.0.0-alpha.6"}
nb-cli = "^0.1.0"

[tool.poetry.dev-dependencies]
nonebot-test = "^0.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
